apps/static/overlays/local/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route
spec:
  parentRefs:
    - name: public-gateway
      namespace: istio-gateway
      sectionName: https
  hostnames:
    - set-in-overlay
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /schemas
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Access-Control-Allow-Origin
                value: "*"
              - name: Access-Control-Allow-Methods
                value: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
              - name: Access-Control-Allow-Headers
                value: "DNT,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization"
              - name: Access-Control-Max-Age
                value: "1728000"
      backendRefs:
        - name: source-meta-svc
          kind: Service
          port: 8000
    - filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Access-Control-Allow-Origin
                value: "*"
              - name: Access-Control-Allow-Methods
                value: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
              - name: Access-Control-Allow-Headers
                value: "DNT,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization"
              - name: Access-Control-Max-Age
                value: "1728000"
      backendRefs:
        - name: svc
          kind: Service
          port: 80
